--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,11 @@
     <form
     action="https://mate-academy-form-lesson.herokuapp.com/create-application"
     method="post"
+    autocomplete="off"
     >
 
       <fieldset class="container">
-        <legend>Personal information</legend>
+        <legend class="p-i">Personal information</legend>
         <label class="form-field">
           Surname:
           <input type="text" name="surename" autocomplete="off">
@@ -28,7 +29,7 @@
           <input type="text" name="name" autocomplete="off">
         </label>
         <label class="form-field">
-          How old are You:
+          How old are You?
           <input 
         type="number" 
         min="1" 
@@ -41,85 +42,87 @@
           <input type="date">
         </label>
         <label class="form-field">
-         I accept the term of the agrement
+         I accept the term of the agreement
           <input name="accept" type="checkbox">
         </label>
       </fieldset>
 
-      <fieldset>
-        <legend>Registration</legend>
-        <label class="mail">
+      <fieldset class="container">
+        <legend class="reg">Registration</legend>
+        <label class="form-field">
         E-mail:
-          <input type="email" 
+          <input 
+        type="email" 
         name="email" 
         placeholder="email@example.com" 
         required>
         </label>
-        <label class="password">
+        <label class="form-field">
         Password:
           <input
          type="password"
          name="password" 
-         required minlength="6" 
+         required
+         minlength="6" 
          maxlength="12">
         </label>
       </fieldset>
 
-      <fieldset>
-        <legend>An interesing fact about you</legend>
-        <div class="for-ask-cat">
-          <label class="cat">
+      <fieldset class="container">
+        <legend>An interesting fact about you!</legend>
+        <!-- <div class="for-ask-cat"> -->
+        <label class="form-field">
         Do you love cats?
-            <input type="radio" name="cats">
+          <input type="radio" name="cats">
           Yes
-            <input type="radio" name="cats">
+          <input type="radio" name="cats">
            No  
-          </label>
-        </div>
-        <label class="color">
-        What is your faworite color?
+        </label>
+        <!-- </div> -->
+        <label class="form-field">
+        What is your favorite color?
           <input type="color">
         </label>
-        <label class="time-to-bad">
-        What time do you go to bad:
-          <input type="time">
+        <label class="form-field">
+        What time do you go to bad?
+          <input type="time" name="time" step="2">
         </label>
-        <label class="car-brands">
-        What is your faworite cars brands:
+        <label class="form-field">
+        What are your favorite brand of cars?
           <select name="car-brands" multiple>
             <option value="BMW">BMW</option>
             <option value="Audi">Audi</option>
             <option value="Lada">Lada</option>
           </select>
         </label>
-        <label class="rate-work">
-        How do you rate ouer work?
+        <label class="form-field">
+        How do you rate our work?
           <input 
           type="range" 
           name="rate"
           min="1"
           max="10"
-          value="5" >
+          value="1" >
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="container">
         <legend>Additional info</legend>
-        <label>
+        <label class="form-field">
       Comments:
           <textarea name="feedback"></textarea>
         </label>
-        <label>
-      Would you recommendet us?
+        <label class="form-field">
+      Would you recommend us?
           <select>
-            <option value="Yes">Yes</option>
+            <option value="Yes" selected>Yes</option>
             <option value="No">No</option>
           </select>
         </label>
         
       </fieldset>
       
-      <button type="submit">Submit</button>
+      <button type="submit" class="submit">Submit</button>
 
     </form>
     <script type="text/javascript" src="./main.js"></script>
