--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,22 @@
     <form
     action="https://mate-academy-form-lesson.herokuapp.com/create-application"
     method="post"
-    autocomplete="off"
-    >
+    autocomplete="off">
 
       <fieldset class="container">
         <legend class="p-i">Personal information</legend>
         <label class="form-field">
           Surname:
-          <input type="text" name="surename" autocomplete="off">
+          <input type="text" 
+          name="surename" 
+          autocomplete="off">
         </label>
         <label class="form-field">
           Name:
-          <input type="text" name="name" autocomplete="off">
+          <input 
+          type="text" 
+          name="name" 
+          autocomplete="off">
         </label>
         <label class="form-field">
           How old are You?
@@ -85,7 +89,10 @@
         </label>
         <label class="form-field">
         What time do you go to bad?
-          <input type="time" name="time" step="2">
+          <input 
+          type="time" 
+          name="time" 
+          step="2">
         </label>
         <label class="form-field">
         What are your favorite brand of cars?
