--- a/src/index.html
+++ b/src/index.html
@@ -31,19 +31,21 @@
         <label class="form-field">
           Name:
           <input 
-          type="text" 
-          name="name" 
-          autocomplete="off">
+            type="text" 
+            name="name" 
+            autocomplete="off"
+          >
         </label>
 
         <label class="form-field">
           How old are You?
           <input 
-          type="number" 
-          min="1" 
-          max="100" 
-          value="12" 
-          name="how-old-are-you"> 
+            type="number" 
+            min="1" 
+            max="100" 
+            value="12" 
+            name="how-old-are-you"
+          > 
         </label>
 
         <label class="form-field">
@@ -66,20 +68,22 @@
         <label class="form-field">
         E-mail:
           <input 
-        type="email" 
-        name="email" 
-        placeholder="email@example.com" 
-        required>
+            type="email" 
+            name="email" 
+            placeholder="email@example.com" 
+            required
+          >
         </label>
 
         <label class="form-field">
         Password:
           <input
-           type="password"
-           name="password" 
-           required
-           minlength="6" 
-           maxlength="12">
+            type="password"
+            name="password" 
+            required
+            minlength="6" 
+            maxlength="12"
+          >
         </label>
 
       </fieldset>
@@ -106,7 +110,8 @@
           <input 
             type="time" 
             name="time" 
-            step="2">
+            step="2"
+          >
         </label>
 
         <label class="form-field">
@@ -125,7 +130,8 @@
             name="rate"
             min="1"
             max="10"
-            value="1" >
+            value="1"
+          >
         </label>
 
       </fieldset>
